Responsive and stable ever

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Portfolio</title>
+    <title>Face of Dreams</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="ubuntu-logo.png" type="image/png">
 </head>
@@ -30,7 +30,7 @@
             <p>
                 Hello! I'm a passionate web developer with a love for creating beautiful and functional websites.
                 I enjoy bringing ideas to life through code and continuously learning new technologies.
-                This is a simple portfolio showcasing my journey and capabilities.
+                This is a  portfolio showcasing my journey and capabilities.
             </p>
             <p>
                 When I'm not coding, you can find me exploring new ideas and enjoying life.
@@ -72,9 +72,9 @@
             <h2>Get in Touch</h2>
             <p>I'm always open to new opportunities and collaborations. Feel free to reach out!</p>
             <address>
-                Email: <a href="mailto:your.email@example.com">your.email@example.com</a><br>
-                LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn Profile</a><br>
-                GitHub: <a href="https://github.com/yourusername" target="_blank">Your GitHub Profile</a>
+                Email: <a href="justforcodings@hotmail.com">Justforcodings@hotmail.com</a><br>
+                LinkedIn: <a href="https://www.linkedin.com/in/berdimuhammet-yslamow-b7900a319/" target="_blank">My linkedin</a><br>
+                GitHub: <a href="https://github.com/Code-Creator-man" target="_blank">My GitHub Profile</a>
             </address>
         </div>
     </section>
