--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js"></script>
+    <!-- Favicon'u değiştirmek için aşağıdaki satırı düzenleyin -->
+    <link rel="icon" type="image/png" href="ubuntu-logo.png"
   </head>
   <body class="bg-gray-50">
     <!-- Header -->
@@ -27,7 +29,7 @@
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
-        <a href="#" class="text-2xl font-['Pacifico'] text-white">logo</a>
+        <a href="#" class="text-2xl font-['Pacifico'] text-white">Face of Dreams</a>
         <nav class="hidden md:flex space-x-8">
           <a
             href="#about"
@@ -89,8 +91,13 @@
       </div>
     </header>
     <!-- Hero Section -->
-    <section id="home" class="hero-section min-h-screen flex items-center">
-      <div class="container mx-auto px-4">
+    <section
+      id="home"
+      class="hero-section min-h-screen flex items-center bg-cover bg-center relative"
+      style="background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1500&q=80');"
+    >
+      <div class="absolute inset-0 bg-black bg-opacity-60"></div>
+      <div class="container mx-auto px-4 relative z-10">
         <div class="max-w-3xl">
           <h1
             class="text-4xl sm:text-5xl md:text-6xl font-bold text-white mb-6 heading"
@@ -135,14 +142,14 @@
         <div class="flex flex-col md:flex-row items-center gap-12">
           <div class="md:w-1/2">
             <img
-              src="https://readdy.ai/api/search-image?query=A%20professional%203D%20artist%20working%20at%20a%20modern%20desk%20with%20multiple%20monitors%20showing%20Blender%20software.%20The%20artist%20is%20wearing%20casual%20but%20stylish%20clothes%2C%20focused%20on%20creating%20a%20detailed%203D%20model.%20The%20lighting%20is%20soft%20and%20professional%2C%20creating%20a%20creative%20atmosphere.%20The%20artist%20appears%20confident%20and%20skilled%2C%20with%20a%20thoughtful%20expression.%20The%20overall%20image%20has%20a%20clean%2C%20professional%20aesthetic%20with%20soft%20lighting.&width=600&height=800&seq=about1&orientation=portrait"
+              src="astronaut-purple-3840x2160-22432.jpg"
               alt="3D Sanatçı"
               class="rounded-lg shadow-xl object-cover w-full h-auto max-w-md mx-auto"
             />
           </div>
           <div class="md:w-1/2 mt-8 md:mt-0">
             <h2 class="text-2xl sm:text-3xl font-bold mb-6 heading text-white">
-              Merhaba, Ben Ahmet Yılmaz
+              Merhaba, Ben Berdimuhammet Yslamow
             </h2>
             <p class="text-gray-300 mb-6">
               10 yılı aşkın süredir 3D modelleme ve dijital sanat alanında
@@ -942,9 +949,7 @@
             </div>
           </div>
           <!-- Step 4 -->
-          <div
-            class="flex flex-col md:flex-row-reverse items-center mb-12 md:mb-24"
-          >
+          <div class="flex flex-col md:flex-row-reverse items-center mb-12 md:mb-24">
             <div
               class="md:w-1/2 md:pl-16 mb-8 md:mb-0 text-center md:text-left"
             >
@@ -1004,37 +1009,6 @@
                 class="rounded-lg shadow-lg w-full"
               />
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Stats Section -->
-    <section class="py-12 md:py-16 bg-primary">
-      <div class="container mx-auto px-4">
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 md:gap-8">
-          <div class="text-center">
-            <div class="text-3xl md:text-4xl font-bold text-white mb-2">
-              250+
-            </div>
-            <div class="text-white text-opacity-80">Tamamlanan Proje</div>
-          </div>
-          <div class="text-center">
-            <div class="text-3xl md:text-4xl font-bold text-white mb-2">
-              120+
-            </div>
-            <div class="text-white text-opacity-80">Mutlu Müşteri</div>
-          </div>
-          <div class="text-center">
-            <div class="text-3xl md:text-4xl font-bold text-white mb-2">
-              10+
-            </div>
-            <div class="text-white text-opacity-80">Yıllık Deneyim</div>
-          </div>
-          <div class="text-center">
-            <div class="text-3xl md:text-4xl font-bold text-white mb-2">
-              15+
-            </div>
-            <div class="text-white text-opacity-80">Ödül & Başarı</div>
           </div>
         </div>
       </div>
@@ -1267,7 +1241,7 @@
             <button
               class="faq-toggle w-full flex justify-between items-center p-4 md:p-6 text-left focus:outline-none cursor-pointer"
             >
-              <span class="text-base md:text-lg font-medium text-white"
+              <span class="text-base md:textlg font-medium text-white"
                 >Hangi dosya formatlarında teslimat yapıyorsunuz?</span
               >
               <i
@@ -1551,28 +1525,58 @@
               <h4 class="font-medium text-white mb-4">Sosyal Medya</h4>
               <div class="flex space-x-4 mb-8">
                 <a
-                  href="#"
+                  href="https://instagram.com/"
+                  target="_blank"
+                  rel="noopener"
                   class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-gray-600 transition-all cursor-pointer"
+                  aria-label="Instagram"
                 >
                   <i class="ri-instagram-line text-white"></i>
                 </a>
                 <a
-                  href="#"
+                  href="https://behance.net/"
+                  target="_blank"
+                  rel="noopener"
                   class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-gray-600 transition-all cursor-pointer"
+                  aria-label="Behance"
                 >
                   <i class="ri-behance-line text-white"></i>
                 </a>
                 <a
-                  href="#"
+                  href="https://www.artstation.com/"
+                  target="_blank"
+                  rel="noopener"
                   class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-gray-600 transition-all cursor-pointer"
+                  aria-label="ArtStation"
                 >
                   <i class="ri-artstation-line text-white"></i>
                 </a>
                 <a
-                  href="#"
+                  href="https://linkedin.com/"
+                  target="_blank"
+                  rel="noopener"
                   class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-gray-600 transition-all cursor-pointer"
+                  aria-label="LinkedIn"
                 >
                   <i class="ri-linkedin-line text-white"></i>
+                </a>
+                <a
+                  href="https://github.com/"
+                  target="_blank"
+                  rel="noopener"
+                  class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-gray-600 transition-all cursor-pointer"
+                  aria-label="GitHub"
+                >
+                  <i class="ri-github-line text-white"></i>
+                </a>
+                <a
+                  href="https://twitter.com/"
+                  target="_blank"
+                  rel="noopener"
+                  class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-gray-600 transition-all cursor-pointer"
+                  aria-label="X"
+                >
+                  <i class="ri-twitter-x-line text-white"></i>
                 </a>
               </div>
               <h4 class="font-medium text-white mb-4">Çalışma Saatleri</h4>
@@ -1602,37 +1606,6 @@
         </div>
       </div>
     </section>
-    <!-- Newsletter Section -->
-    <section class="py-12 md:py-16 bg-gradient-to-r from-primary to-secondary">
-      <div class="container mx-auto px-4">
-        <div class="max-w-3xl mx-auto text-center">
-          <h2 class="text-2xl md:text-3xl font-bold mb-4 text-white">
-            Yeniliklerden Haberdar Olun
-          </h2>
-          <p class="text-white text-opacity-90 mb-6 md:mb-8">
-            En son projelerim, indirimler ve 3D modelleme dünyasındaki
-            yenilikler hakkında bilgi almak için bültene abone olun.
-          </p>
-          <form class="flex flex-col sm:flex-row gap-4">
-            <input
-              type="email"
-              placeholder="E-posta adresiniz"
-              class="flex-grow px-4 py-3 rounded-l-lg focus:outline-none border-none"
-            />
-            <button
-              type="submit"
-              class="bg-white text-primary px-6 py-3 rounded-r-lg font-medium hover:bg-opacity-90 transition-all whitespace-nowrap !rounded-button cursor-pointer"
-            >
-              Abone Ol
-            </button>
-          </form>
-          <p class="text-white text-opacity-70 text-sm mt-4">
-            Gizliliğinize saygı duyuyoruz. E-posta adresinizi asla üçüncü
-            taraflarla paylaşmayacağız.
-          </p>
-        </div>
-      </div>
-    </section>
     <!-- Footer -->
     <footer class="bg-gray-900 text-white pt-12 md:pt-16 pb-6 md:pb-8">
       <div class="container mx-auto px-4">
@@ -1643,7 +1616,7 @@
             <a
               href="#"
               class="text-2xl font-['Pacifico'] mb-4 md:mb-6 inline-block"
-              >logo</a
+              >Face of Dreams</a
             >
             <p class="text-gray-400 mb-6">
               Profesyonel 3D modelleme ve görselleştirme hizmetleri. Blender ile
@@ -1777,7 +1750,7 @@
         <hr class="border-gray-800 mb-6 md:mb-8" />
         <div class="flex flex-col md:flex-row justify-between items-center">
           <div class="text-gray-500 mb-4 md:mb-0">
-            &copy; 2025 Ahmet Yılmaz 3D. Tüm hakları saklıdır.
+            &copy; 2025 Vniverse77 3D & S.E. All rights reserved.
           </div>
           <div class="flex flex-wrap justify-center gap-4 md:gap-6">
             <a href="#" class="text-gray-500 hover:text-white transition-colors"
