--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         </div>
         <div class="mb-16">
           <h3 class="text-2xl font-semibold mb-8 gradient-text">
-            Yazılım Teknolojileri
+            Software technologies
           </h3>
           <div
             class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"
@@ -459,7 +459,7 @@
                 <h4 class="text-lg font-medium">HTML/CSS</h4>
               </div>
               <div class="mb-2 flex justify-between">
-                <span class="text-gray-400">Uzmanlık</span>
+                <span class="text-gray-400">Mastery</span>
                 <span>90%</span>
               </div>
               <div class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden">
@@ -479,7 +479,7 @@
                 <h4 class="text-lg font-medium">JavaScript</h4>
               </div>
               <div class="mb-2 flex justify-between">
-                <span class="text-gray-400">Uzmanlık</span>
+                <span class="text-gray-400">Mastery</span>
                 <span>85%</span>
               </div>
               <div class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden">
@@ -499,7 +499,7 @@
                 <h4 class="text-lg font-medium">React</h4>
               </div>
               <div class="mb-2 flex justify-between">
-                <span class="text-gray-400">Uzmanlık</span>
+                <span class="text-gray-400">Mastery</span>
                 <span>80%</span>
               </div>
               <div class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden">
@@ -539,7 +539,7 @@
                 <h4 class="text-lg font-medium">SQL/NoSQL</h4>
               </div>
               <div class="mb-2 flex justify-between">
-                <span class="text-gray-400">Uzmanlık</span>
+                <span class="text-gray-400">Mastery</span>
                 <span>70%</span>
               </div>
               <div class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden">
@@ -559,7 +559,7 @@
                 <h4 class="text-lg font-medium">Git</h4>
               </div>
               <div class="mb-2 flex justify-between">
-                <span class="text-gray-400">Uzmanlık</span>
+                <span class="text-gray-400">Mastery</span>
                 <span>85%</span>
               </div>
               <div class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden">
@@ -579,7 +579,7 @@
                 <h4 class="text-lg font-medium">Flutter</h4>
               </div>
               <div class="mb-2 flex justify-between">
-                <span class="text-gray-400">Uzmanlık</span>
+                <span class="text-gray-400">Mastery</span>
                 <span>65%</span>
               </div>
               <div class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden">
@@ -599,7 +599,7 @@
                 <h4 class="text-lg font-medium">Python</h4>
               </div>
               <div class="mb-2 flex justify-between">
-                <span class="text-gray-400">Uzmanlık</span>
+                <span class="text-gray-400">Mastery</span>
                 <span>60%</span>
               </div>
               <div class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden">
@@ -613,7 +613,7 @@
         </div>
         <div>
           <h3 class="text-2xl font-semibold mb-8 gradient-text">
-            3D Modelleme & Tasarım
+            3D Modelling & art
           </h3>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="bg-[#1E293B] rounded-lg p-6 card-hover">
@@ -628,7 +628,7 @@
               <div class="space-y-4">
                 <div>
                   <div class="mb-2 flex justify-between">
-                    <span class="text-gray-400">Modelleme</span>
+                    <span class="text-gray-400">Modelling</span>
                     <span>80%</span>
                   </div>
                   <div
@@ -679,8 +679,7 @@
               <div class="p-6">
                 <h4 class="text-lg font-medium mb-2">3D Modelleme Portföyü</h4>
                 <p class="text-gray-400 mb-4">
-                  Karakterler, ortamlar ve ürün tasarımları dahil olmak üzere
-                  çeşitli 3D modelleme projelerim.
+                  Characters, environments, and objects created using Blender. I also have some projects:
                 </p>
                 <a
                   href="#portfolio"
@@ -714,25 +713,25 @@
               class="px-4 sm:px-6 py-2 rounded-full bg-primary text-white whitespace-nowrap text-sm sm:text-base"
               data-filter="all"
             >
-              Tümü
+              All
             </button>
             <button
               class="px-4 sm:px-6 py-2 rounded-full text-gray-300 hover:text-white whitespace-nowrap text-sm sm:text-base"
               data-filter="web"
             >
-              Web Geliştirme
+              Web development
             </button>
             <button
               class="px-4 sm:px-6 py-2 rounded-full text-gray-300 hover:text-white whitespace-nowrap text-sm sm:text-base"
               data-filter="mobile"
             >
-              Mobil Uygulama
+              Mobil Application
             </button>
             <button
               class="px-4 sm:px-6 py-2 rounded-full text-gray-300 hover:text-white whitespace-nowrap text-sm sm:text-base"
               data-filter="3d"
             >
-              3D Modelleme
+              3D Modelling
             </button>
           </div>
         </div>
@@ -754,15 +753,13 @@
               <div
                 class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Web Geliştirme
+                Web Development
               </div>
             </div>
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2">E-ticaret Platformu</h3>
               <p class="text-gray-400 mb-4">
-                React ve Node.js kullanılarak geliştirilen tam kapsamlı bir
-                e-ticaret çözümü. Ödeme entegrasyonu, kullanıcı yönetimi ve
-                envanter takibi içerir.
+                A comprehensive e-commerce solution developed using React and Node.js. It includes payment integration, user management, and inventory tracking.
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
@@ -786,7 +783,7 @@
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
                 data-project="project1"
               >
-                <span>Detayları Gör</span>
+                <span>See details</span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -800,44 +797,52 @@
           >
             <div class="relative">
               <img
-                src="https://readdy.ai/api/search-image?query=Mobile%20fitness%20app%20interface%20with%20dark%20theme%2C%20showing%20workout%20tracking%20screens%2C%20user%20statistics%20with%20graphs%2C%20clean%20UI%20with%20purple%20accent%20colors%2C%20professional%20mobile%20app%20development%20project%20screenshot%20on%20smartphone&width=600&height=400&seq=project2&orientation=landscape"
-                alt="Fitness Takip Uygulaması"
-                class="w-full h-56 object-cover"
+              src="https://readdy.ai/api/search-image?query=Mobile%20fitness%20app%20interface%20with%20dark%20theme%2C%20showing%20workout%20tracking%20screens%2C%20user%20statistics%20with%20graphs%2C%20clean%20UI%20with%20purple%20accent%20colors%2C%20professional%20mobile%20app%20development%20project%20screenshot%20on%20smartphone&width=600&height=400&seq=project2&orientation=landscape"
+              alt="Fitness Tracking App"
+              class="w-full h-56 object-cover"
               />
               <div
-                class="absolute top-4 right-4 bg-secondary/90 text-white px-3 py-1 rounded-full text-sm"
+              class="absolute top-4 right-4 bg-secondary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Mobil Uygulama
+              Mobile Application
               </div>
             </div>
             <div class="p-6">
-              <h3 class="text-xl font-semibold mb-2">
-                Fitness Takip Uygulaması
-              </h3>
+              <h3 class="text-xl font-semibold mb-2">Fitness Tracking App</h3>
               <p class="text-gray-400 mb-4">
-                Flutter ile geliştirilen, kullanıcıların antrenmanlarını takip
-                edebileceği, beslenme planlarını yönetebileceği ve ilerleme
-                grafiklerini görebileceği kapsamlı bir fitness uygulaması.
+              A comprehensive fitness application developed with Flutter,
+              allowing users to track their workouts, manage their nutrition
+              plans and view progress graphs.
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
-                <span
-                  class="bg-[#0F172A] text-gray-300 px-3 py-1 rounded-full text-xs"
-                  >Flutter</span
-                >
-                <span
-                  class="bg-[#0F172A] text-gray-300 px-3 py-1 rounded-full text-xs"
-                  >Firebase</span
-                >
-                <span
-                  class="bg-[#0F172A] text-gray-300 px-3 py-1 rounded-full text-xs"
-                  >Health API</span
-                >
+              <span
+                class="bg-[#0F172A] text-gray-300 px-3 py-1 rounded-full text-xs"
+                >Flutter</span
+              >
+              <span
+                class="bg-[#0F172A] text-gray-300 px-3 py-1 rounded-full text-xs"
+                >Firebase</span
+              >
+              <span
+                class="bg-[#0F172A] text-gray-300 px-3 py-1 rounded-full text-xs"
+                >Health API</span
+              >
               </div>
+              <button
+              class="text-secondary hover:text-secondary/80 inline-flex items-center project-details-btn"
+              data-project="project2"
+              >
+              <span>See details</span>
+              <span class="w-5 h-5 flex items-center justify-center ml-1">
+                <i class="ri-arrow-right-line"></i>
+              </span>
+              </button>
+            </div>
               <button
                 class="text-secondary hover:text-secondary/80 inline-flex items-center project-details-btn"
                 data-project="project2"
               >
-                <span>Detayları Gör</span>
+                <span>See details</span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -858,17 +863,17 @@
               <div
                 class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                3D Modelleme
+                3D Modelling
               </div>
             </div>
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2">
-                Sci-Fi Karakter Tasarımı
+                Sci-Fi Character designs
               </h3>
               <p class="text-gray-400 mb-4">
-                Blender kullanılarak tasarlanan, bir video oyunu için
-                oluşturulmuş detaylı bir bilim kurgu karakter modeli. Rigging ve
-                temel animasyonlar içerir.
+                A detailed sci-fi character model designed using Blender and
+                created for a video game. Includes rigging and basic
+                animations.
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
@@ -888,7 +893,7 @@
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
                 data-project="project3"
               >
-                <span>Detayları Gör</span>
+                <span>See details</span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -909,15 +914,15 @@
               <div
                 class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Web Geliştirme
+                Web Development
               </div>
             </div>
             <div class="p-6">
-              <h3 class="text-xl font-semibold mb-2">Analitik Dashboard</h3>
+              <h3 class="text-xl font-semibold mb-2">Analitic Dashboard</h3>
               <p class="text-gray-400 mb-4">
-                İşletmelerin verilerini görselleştirmelerine ve analiz
-                etmelerine olanak tanıyan interaktif bir dashboard. Gerçek
-                zamanlı veri izleme ve raporlama özellikleri içerir.
+                An interactive dashboard that allows businesses to visualize
+                and analyze their data. Includes real-time data monitoring and
+                reporting features.
               </p>
               <div class="flex flex-wrap gap-2 mb-4">
                 <span
