Fucking ai smelling

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <div id="devNotification" class="fixed inset-0 bg-black bg-opacity-90 z-[10000] flex flex-col justify-center items-center">
       <div class="bg-[#1E293B] p-8 rounded-lg text-center max-w-md mx-4">
         <h2 class="text-2xl font-bold text-white mb-4">Dev Notice</h2>
-        <p class="text-gray-300 mb-6">The site is still under development. To continue please tap Ok button!</p>
+        <p class="text-gray-300 mb-6">The site is still under development. To continue please tap "Ok" button!</p>
         <button id="devNotificationBtn" class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-button font-medium transition-all duration-300">Ok</button>
       </div>
     </div>
@@ -513,7 +513,7 @@
                 >
                   <i class="ri-database-2-line text-2xl text-primary"></i>
                 </div>
-                <h4 class="text-lg font-medium">SQL/NoSQL</h4>
+                <h4 class="text-lg font-medium">Bash Scripting</h4>
               </div>
               <div class="mb-2 flex justify-between">
                 <span class="text-gray-400">Expertise</span>
@@ -537,7 +537,7 @@
               </div>
               <div class="mb-2 flex justify-between">
                 <span class="text-gray-400">Expertise</span>
-                <span>85%</span>
+                <span>90%</span>
               </div>
               <div class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden">
                 <div
@@ -1034,7 +1034,7 @@ It includes lighting and material studies.
     <section id="social" class="py-20 relative gradient-bg">
       <div class="container mx-auto px-6">
         <div class="text-center mb-16">
-          <h2 class="text-3xl md:text-4xl font-bold mb-4">Sosyal Medya</h2>
+          <h2 class="text-3xl md:text-4xl font-bold mb-4">Social Media</h2>
           <p class="text-gray-400 max-w-2xl mx-auto">
             Information about my social media accounts and activities
 You can get them here.
@@ -1051,7 +1051,7 @@ You can get them here.
               </div>
               <div>
                 <h3 class="text-xl font-semibold">GitHub</h3>
-                <a href="#" class="text-gray-400 hover:text-primary"
+                <a href="https://github.com/Code-Creator-man" class="text-gray-400 hover:text-primary"
                   >@Code-Creator-man</a
                 >
               </div>
@@ -1059,15 +1059,15 @@ You can get them here.
             <div class="mb-6">
               <div class="flex justify-between mb-2">
                 <span>Repositories</span>
-                <span>32</span>
+                <span>13</span>
               </div>
               <div class="flex justify-between mb-2">
                 <span>Followers</span>
-                <span>128</span>
+                <span>16</span>
               </div>
               <div class="flex justify-between">
                 <span>Supports (This year)</span>
-                <span>847</span>
+                <span>8</span>
               </div>
             </div>
             <div class="bg-[#0F172A] rounded p-4 mb-4">
@@ -1093,7 +1093,7 @@ You can get them here.
               </div>
               <div>
                 <h3 class="text-xl font-semibold">LinkedIn</h3>
-                <a href="Paste here ..." class="text-gray-400 hover:text-[#0077B5]"
+                <a href="https://www.linkedin.com/in/berdimuhammet-yslamow-b7900a319/" class="text-gray-400 hover:text-[#0077B5]"
                   >Vniverse77</a
                 >
               </div>
@@ -1139,7 +1139,7 @@ Creative Technologies
               </div>
             </div>
             <a
-              href="#"
+              href="https://www.linkedin.com/in/berdimuhammet-yslamow-b7900a319/"
               class="bg-[#0077B5] hover:bg-[#0077B5]/80 text-white w-full py-2 rounded-button font-medium transition-all duration-300 flex items-center justify-center whitespace-nowrap"
             >
               <span class="w-5 h-5 flex items-center justify-center mr-2">
@@ -1158,15 +1158,15 @@ Creative Technologies
               </div>
               <div>
                 <h3 class="text-xl font-semibold">Twitter</h3>
-                <a href="#" class="text-gray-400 hover:text-[#1DA1F2]"
-                  >@vniverse77</a
+                <a href="https://x.com/Yslamow_B" class="text-gray-400 hover:text-[#1DA1F2]"
+                  >@Yslamow_B</a
                 >
               </div>
             </div>
             <div class="mb-6">
               <div class="flex justify-between mb-2">
                 <span>Followers</span>
-                <span>743</span>
+                <span>143</span>
               </div>
               <div class="flex justify-between mb-2">
                 <span>Following</span>
@@ -1230,7 +1230,7 @@ I will start. #Blender3D #Tutorial
               </div>
             </div>
             <a
-              href="#"
+              href="https://x.com/Yslamow_B"
               class="bg-[#1DA1F2] hover:bg-[#1DA1F2]/80 text-white w-full py-2 rounded-button font-medium transition-all duration-300 flex items-center justify-center whitespace-nowrap"
             >
               <span class="w-5 h-5 flex items-center justify-center mr-2">
