--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
   </head>
   <body class="bg-[#0F172A] text-gray-200">
     <!-- Begin dev notification overlay -->
-    <div id="devNotification" class="fixed inset-0 bg-black bg-opacity-90 z-[10000] flex flex-col justify-center items-center">
+    <!-- <div id="devNotification" class="fixed inset-0 bg-black bg-opacity-90 z-[10000] flex flex-col justify-center items-center">
       <div class="bg-[#1E293B] p-8 rounded-lg text-center max-w-md mx-4">
         <h2 class="text-2xl font-bold text-white mb-4">Dev Notice</h2>
         <p class="text-gray-300 mb-6">The site is still under development. To continue please tap "Ok" button!</p>
         <button id="devNotificationBtn" class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-button font-medium transition-all duration-300">Ok</button>
       </div>
-    </div>
+    </div> -->
     <!-- End dev notification overlay -->
     <div class="custom-cursor"></div>
     <div class="custom-cursor-follower"></div>
@@ -662,7 +662,7 @@
                   href="#portfolio"
                   class="text-secondary hover:text-secondary/80 inline-flex items-center"
                 >
-                  <span>See more</span>
+                  <span>See more...</span>
                   <span class="w-5 h-5 flex items-center justify-center ml-1">
                     <i class="ri-arrow-right-line"></i>
                   </span>
@@ -702,7 +702,7 @@
               class="px-4 sm:px-6 py-2 rounded-full text-gray-300 hover:text-white whitespace-nowrap text-sm sm:text-base"
               data-filter="mobile"
             >
-              Mobil Application
+              Mobile Application
             </button>
             <button
               class="px-4 sm:px-6 py-2 rounded-full text-gray-300 hover:text-white whitespace-nowrap text-sm sm:text-base"
@@ -783,7 +783,7 @@ Contains inventory tracking.
               <div
                 class="absolute top-4 right-4 bg-secondary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Mobil Application
+                Mobile Application
               </div>
             </div>
             <div class="p-6">
@@ -934,7 +934,7 @@ Timed data monitoring and reporting features.
               <div
                 class="absolute top-4 right-4 bg-secondary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Mobil App
+                Mobile App
               </div>
             </div>
             <div class="p-6">
@@ -1074,13 +1074,13 @@ You can get them here.
               <div id="githubContributions" class="w-full h-32"></div>
             </div>
             <a
-              href="#"
+              href="https://github.com/Code-Creator-man/"
               class="bg-[#0F172A] hover:bg-[#1E293B] text-white w-full py-2 rounded-button font-medium transition-all duration-300 flex items-center justify-center whitespace-nowrap"
             >
               <span class="w-5 h-5 flex items-center justify-center mr-2">
                 <i class="ri-github-fill"></i>
               </span>
-              <span>View Profile</span>
+              <span>View Repos</span>
             </a>
           </div>
           <!-- LinkedIn Card -->
@@ -1148,13 +1148,79 @@ Creative Technologies
               <span>View Profile</span>
             </a>
           </div>
+          <!-- Start Card -->
+            <div class="bg-[#1E293B] rounded-lg p-6 card-hover">
+            <div class="flex items-center mb-6">
+              <div
+                class="w-12 h-12 flex items-center justify-center bg-[#0889f3]/20 rounded-full mr-4"
+              >
+                <i class="ri-telegram-fill text-2xl text-[#0889f3]"></i>
+              </div>
+              <div>
+                <h3 class="text-xl font-semibold">Start</h3>
+                <a href="https://tmstart.me/face_of_dreams" class="text-gray-400 hover:text-[#0077B5]"
+                  >@face_of_dreams</a
+                >
+              </div>
+            </div>
+            <div class="mb-6">
+              <p class="text-gray-400 mb-4">
+                Programistler we kompyutere, Linux'a dusunyanler ucin Chat 💻.
+                 Bu Group adamlara mugt ve ynamly cesmelerden oz gozleyan maglumatlaryny,
+                  dusunmeyan zatlaryny, esasan LINUX barada maglumatlary tapmagy ozune maksat edinendir!!!
+              </p>
+              <div class="flex justify-between mb-2">
+                <span>Stories</span>
+                <span>2</span>
+              </div>
+              <div class="flex justify-between mb-2">
+                <span>Post views</span>
+                <span>2.4K</span>
+              </div>
+            </div>
+            <div class="bg-[#0F172A] rounded p-4 mb-4">
+              <h4 class="font-medium mb-2">Announcement</h4>
+              <p class="text-gray-400 text-sm">
+               Chat users will now deleted by this night. If you want to continue using the chat, please join the new group. And bots are not allowed in the group, so please don't use them.
+              </p>
+              <div class="flex mt-2 text-sm">
+                <span class="flex items-center mr-4">
+                  <span class="w-4 h-4 flex items-center justify-center mr-1">
+                    <i class="ri-thumb-up-line"></i>
+                  </span>
+                  <span>219</span>
+                </span>
+                <span class="flex items-center mr-4">
+                  <span class="w-4 h-4 flex items-center justify-center mr-1">
+                    <i class="ri-chat-1-line"></i>
+                  </span>
+                  <span>12</span>
+                </span>
+                <span class="flex items-center">
+                  <span class="w-4 h-4 flex items-center justify-center mr-1">
+                    <i class="ri-share-line"></i>
+                  </span>
+                  <span>24</span>
+                </span>
+              </div>
+            </div>
+            <a
+              href="https://tmstart.me/+4GyB9ZjXeYrxE4RDmdc7"
+              class="bg-[#0077B5] hover:bg-[#0077B5]/80 text-white w-full py-2 rounded-button font-medium transition-all duration-300 flex items-center justify-center whitespace-nowrap"
+            >
+              <span class="w-5 h-5 flex items-center justify-center mr-2">
+                <i class="ri-telegram-fill"></i>
+              </span>
+              <span>Join the Chat</span>
+            </a>
+          </div>
           <!-- Twitter Card -->
           <div class="bg-[#1E293B] rounded-lg p-6 card-hover">
             <div class="flex items-center mb-6">
               <div
                 class="w-12 h-12 flex items-center justify-center bg-[#1DA1F2]/20 rounded-full mr-4"
               >
-                <i class="ri-twitter-x-fill text-2xl text-[#1DA1F2]"></i>
+                <i class="ri-twitter-x-fill text-2xl text-[#000000]"></i>
               </div>
               <div>
                 <h3 class="text-xl font-semibold">Twitter</h3>
@@ -1360,7 +1426,7 @@ I will start. #Blender3D #Tutorial
               <div class="flex items-center">
                 <div class="custom-checkbox" id="termsCheckbox"></div>
                 <label for="termsCheckbox" class="ml-2 text-sm text-gray-400"
-                  >I Accept to edit my personal informations to site ovner</label
+                  >I Accept to edit my personal informations to site ovner.</label
                 >
               </div>
               <button
@@ -1384,9 +1450,9 @@ I will start. #Blender3D #Tutorial
                   <div>
                     <h4 class="font-medium mb-1">E-mail</h4>
                     <a
-                      href="mailto:vniverse77@example.com"
+                      href="mailto:justforcodigs@hotmail.com"
                       class="text-gray-400 hover:text-primary"
-                      >Justforcodings@hotmail.com</a
+                      >justforcodings@hotmail.com</a
                     >
                   </div>
                 </div>
@@ -1427,7 +1493,7 @@ I will start. #Blender3D #Tutorial
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
           <div>
             <!-- Replace the text logo with your footer PNG -->
-            <a href="#" class="logo mb-4 inline-block">
+            <a href="https://tmstart.me/face_of_dreams" class="logo mb-4 inline-block">
               <!-- Replace 'your-footer-logo.png' with your PNG file path -->
               <img src="ubuntu-logo.png" alt="Footer Logo" class="w-32">
             </a>
@@ -1452,13 +1518,20 @@ I will start. #Blender3D #Tutorial
                 href="https://x.com/Yslamow_B"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#1DA1F2]/20 transition-colors"
               >
-                <i class="ri-twitter-x-fill text-lg text-[#1DA1F2]"></i>
+                <i class="ri-twitter-x-fill text-lg text-[#ffffff]"></i>
               </a>
               <a
                 href="https://instagram.com/"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#E1306C]/20 transition-colors"
               >
                 <i class="ri-instagram-fill text-lg text-[#E1306C]"></i>
+              </a>
+               </a>
+              <a
+                href="https://tmstart.me/+4GyB9ZjXeYrxE4RDmdc7"
+                class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#004677]/20 transition-colors"
+              >
+                <i class="ri-telegram-fill text-lg text-[#0984dc]"></i>
               </a>
               <a
                 href="https://open.spotify.com/playlist/2Nrn8p6wkoZH2IUDbVIEnl"
