--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
       transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease;
       }
       input[type="range"] {
-      -webkit-appearance: none;
       width: 100%;
       height: 6px;
       background: #1E293B;
@@ -229,9 +228,9 @@
       -webkit-appearance: none;
       margin: 0;
       }
-      input[type="number"] {
+      /* input[type="number"] {
       -moz-appearance: textfield;
-      }
+      } */
       @keyframes headerEffect {
         from { transform: translateY(-20px); opacity: 0; }
         to { transform: translateY(0); opacity: 1; }
