--- a/index.html
+++ b/index.html
@@ -1520,10 +1520,10 @@ I will start. #Blender3D #Tutorial
                 <i class="ri-twitter-x-fill text-lg text-[#ffffff]"></i>
               </a>
               <a
-                href="https://instagram.com/"
-                class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#E1306C]/20 transition-colors"
+                href="https://discord.gg/4GyB9ZjXeYrxE4RDmdc7"
+                class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#485cf0]/20 transition-colors"
               >
-                <i class="ri-instagram-fill text-lg text-[#E1306C]"></i>
+                <i class="ri-discord-fill text-lg text-[#1f38ee]"></i>
               </a>
                </a>
               <a
@@ -1654,7 +1654,7 @@ I will start. #Blender3D #Tutorial
           <p
             class="text-gray-500 text-sm mb-4 md:mb-0 text-center md:text-left"
           >
-            &copy; 2025 Vniverse77. All rights reserved.
+            &copy; 2025 Face of Dreams. All rights reserved.
           </p>
           <div class="flex flex-wrap justify-center gap-4 md:gap-6">
             <a href="#" class="text-gray-500 hover:text-white text-sm"
