--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <!-- Updated header logo size -->
         <a href="#home" class="logo">
           <!-- Replace 'ubuntu-logo.png' with your PNG file path -->
-          <img src="ubuntu-logo.png" alt="Header Logo" class="w-[69px] h-[69px]">
+          <img src="/images/ubuntu-logo.png" alt="Header Logo" class="w-[69px] h-[69px]">
         </a>
         <nav class="hidden md:flex items-center space-x-8">
           <a
@@ -385,7 +385,7 @@
             <div class="relative w-80 h-80 md:w-96 md:h-96">
               <!-- Updated: change source to your custom image file (place it in /home/groot/Desktop/Portfolio/web-demo/assets/) -->
               <img
-                src="rick-sanchez-rick-3840x2160-9515.jpg"
+                src="/images/rick-sanchez-rick-3840x2160-9515.jpg"
                 alt="3D Avatar"
                 class="w-full h-full object-cover rounded-full border-4 border-primary/30"
               />
